--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@
     --blue-color: #2196F3;
     --black-color: #212121;
     --white-color: #fff;
-    --bg-black-color: rgba(47, 48, 58, 0.6);
+    --bg-black-color: rgba(47, 48, 58, 1);
     --grey-color: #757575;
     --ash-grey-color: #F5F4FA;
     --header-underline-color: #ECECEC;
     --icon-color: #AFB1B8;
+    --icon-contacts-color: #fff;
+    --icon-bg-contacts-color: rgba(255, 255, 255, 0,1);
 }
 
 /* COMMON SELECTORS */
@@ -60,6 +62,7 @@ h6 {
 
 .contacts .link{
     color: var(--grey-color);
+    padding: 10px 0;
 }
 
 .contacts{
@@ -188,6 +191,7 @@ h6 {
 
 .lower-line .company-name{
     padding-bottom: 20px;
+    display: block;
 }
 .lower-line span{
     color: var(--white-color) ;
@@ -221,9 +225,61 @@ h6 {
 .address-list .list{
 
 }
-.lower-line .list li:first-child{
+.lower-line .list > li:first-child{
     padding: 9px 0;
 }
+
+.social-header{
+    color: var(--white-color);
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.143em;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.lower-line .footer-columns{
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-columns > li{
+    margin-right: 70px;
+}
+
+.lower-line .contacts-socials .item{
+    margin-top: 20px;
+    margin-right: 10px;
+    display: flex;
+    width: 44px;
+    height: 44px;
+    /* border: 1px solid tomato; */
+    border-radius: 50%;
+    background-color: var(--icon-bg-contacts-colorcontacts-color);
+}
+
+
+.lower-line .contacts-socials{
+    display: inline-flex;
+}
+
+.lower-line .contacts-socials .refer{
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    list-style: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    fill: var(--icon-contacts-color);
+}
+
+.lower-line .footer-columns .contacts-socials .refer:hover{
+    background-color: var(--hover-color)
+}
+
 /* Lower line */
 
 /* COMMON SELECTORS */
@@ -397,41 +453,36 @@ padding-top: 0;
     letter-spacing: 0.03em;
 }
 
+.regular-customers .item{
+    width: 170px;
+    height: 92px;
+}
+
+
 .regular-customers .list{
     display: flex;
     justify-content: center;
     margin-top: 50px;
 }
 
-.refer{
-    width: 170px;
-}
-
 .regular-customers .list .refer{
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
+    border: 1px solid var(--icon-color);
+    border-radius: 4px;
+    fill: var(--icon-color);
 }
-
-
 
 .regular-customers .list .item:nth-child(n+2){
     margin-left: 30px;
 }
 
-.regular-customers .list .icon{
-    border: 1px solid var(--icon-color);
-    border-radius: 4px;
-    fill: var(--icon-color);
-    padding-top: 16px;
-    padding-bottom: 16px;
-}
-
-.regular-customers .list .icon:hover,
-.regular-customers .list .icon:focus{
+.regular-customers .refer:hover,
+.regular-customers .refer:focus{
     border: 1px solid var(--hover-color);
     border-radius: 4px;
     fill: var(--hover-color)
