--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ h6 {
 }
 
 .lower-line .company-name{
-    padding-bottom: 20px;
+    margin-bottom: 20px;
     display: block;
 }
 .lower-line span{
@@ -289,7 +289,8 @@ h6 {
     fill: var(--icon-contacts-color);
 }
 
-.lower-line .footer-columns .contacts-socials .refer:hover{
+.lower-line .footer-columns .contacts-socials .refer:hover,
+.lower-line .footer-columns .contacts-socials .refer:focus{
     background-color: var(--hover-color)
 }
 
@@ -385,8 +386,11 @@ h6 {
 }
 
 .features .icon-box{
-    padding: 25px 100px;
     background-color: var(--ash-grey-color);
+    display: flex;
+    justify-content: center;
+    height: 120px;
+    align-items: center;
 }
 
 .features .icon{
@@ -452,17 +456,18 @@ padding-top: 0;
 
 .team-section .list .text{
     display: flex;
-    padding: 30px 30px 0 30px;
+    padding: 30px;
     flex-direction: column;
     align-items: center;
 }
 
+.team-list .item .team-socials{
+    margin-top: 16px;
+}
 .team-list .item .team-socials .social-item{
     margin: 0;
     box-shadow: none;
     display: flex;
-    margin-top: 16px;
-    margin-bottom: 30px;
     width: 44px;
     height: 44px;
 }
@@ -481,7 +486,8 @@ padding-top: 0;
     border-radius: 50%;
     fill: var(--icon-team-color);
 }
-.team-socials .item .refer:hover{
+.team-socials .item .refer:hover,
+.team-socials .item .refer:focus{
     background-color: var(--icon-team-bg-hover-color);
     fill: var(--icon-team-hover-color);
 }
@@ -635,7 +641,8 @@ padding-top: 0;
     align-items: flex-start;
 }
 
-.projects .link:hover{
+.projects .link:hover,
+.projects .link:focus{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
                 0px 4px 4px rgba(0, 0, 0, 0.06),
                 1px 4px 6px rgba(0, 0, 0, 0.16);
