--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,12 @@ h6 {
     padding: 94px 0;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    }
+
 /* Upper line */
 
 .header{
@@ -134,26 +140,21 @@ h6 {
     line-height: 1.142em;
     letter-spacing: 0.02em;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
 }
 .nav-list li:first-child{
-    padding-right: 93px;
+    padding-right: 43px;
 }
-.nav-list li:nth-child(n+2){
+/* .nav-list li:nth-child(n+2){
     padding-left: 20px;
     padding-top: 8px;
-}
+} */
+
 
 .nav-list .link:hover,
-.nav-list .link:focus{
+.nav-list .link:focus,
+.upper-line .current-page{
     color: var(--hover-color);
-}
-.upper-line .current-page:visited{
-    color: var(--hover-color);
-}
-
-.nav-list .nav-item .current:active{
-    color: var(--blue-color);
 }
 
 .upper-line .contacts{
@@ -173,7 +174,7 @@ h6 {
     font-size: 14px;
     line-height: 1.142em;
     letter-spacing: 0.02em;
-        
+    
     display: flex;
     align-items: center;
 }
@@ -182,6 +183,10 @@ h6 {
     color: var(--hover-color);
 }
 
+.nav-link{
+    padding-left: 50px;
+    padding-top: 8px;
+}
 /* Upper line */
 
 /* Lower line */
